2012-04-12  Michael Meissner  <meissner@linux.vnet.ibm.com>

	Backport from mainline
	2012-04-12  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/52775
	* config/rs6000/rs6000.h (TARGET_FCFID): Add TARGET_PPC_GPOPT to
	the list of options to enable the FCFID instruction.
	(TARGET_EXTRA_BUILTINS): Adjust comment.

2012-04-12  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52943
	* tree-chrec.h (chrec_is_positive): Remove.
	* tree-scalar-evolution.c (chrec_is_positive): Move ...
	* tree-data-ref.c (chrec_is_positive): ... here.  Make static.
	Return false for a constant zero instead of negative.
	(analyze_siv_subscript_cst_affine): Handle zero difference
	in the initial condition explicitely.

2012-04-10  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR middle-end/52894
	* varasm.c (process_pending_assemble_externals): Set
	pending_assemble_externals_processed true.
	(assemble_external): Call assemble_external_real if the pending
	assemble externals have been processed.

2012-04-09  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/52717
	* config/sparc/sparc.c (sparc_file_end): Set TREE_PUBLIC explicitly on
	the DECL generated for the special GOT helper.

2012-04-06  Walter Lee  <walt@tilera.com>

	Backport from mainline
	2012-03-07  Walter Lee  <walt@tilera.com>

	* config/tilegx/tilegx.c (tilegx_expand_prologue): Don't generate
	REG_CFA_* notes for the stack pointer.
	(tilegx_expand_epilogue): Restore stack pointer by adjusting it by
	EH_RETURN_STACKADJ_RTX.
	* config/tilepro/tilepro.c (tilepro_expand_prologue): Don't
	generate REG_CFA_* notes for the stack pointer.
	(tilepro_expand_epilogue): Restore stack pointer by adjusting it
	by EH_RETURN_STACKADJ_RTX.

2012-04-06  Matt Turner  <mattst88@gmail.com>

	* doc/install.texi: Correct typo "-mno-lsc" -> "-mno-llsc".

2012-04-06  Eric Botcazou  <ebotcazou@adacore.com>

	* config/ia64/ia64.c (ia64_load_pair_ok): Return 0 if the second member